<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calculator.MainActivity">

    <Button
        android:id="@+id/btn7"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn8"
        android:layout_alignBaseline="@+id/btn7"
        android:layout_alignBottom="@+id/btn7"
        android:layout_toEndOf="@+id/btn7"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn9"
        android:layout_alignBaseline="@+id/btn8"
        android:layout_alignBottom="@+id/btn8"
        android:layout_toEndOf="@+id/btn8"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn7"
        android:layout_below="@+id/btn7"
        android:layout_marginTop="12dp"
        android:text="@string/btn4"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn8"
        android:layout_alignTop="@+id/btn4"
        android:text="@string/btn5"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn9"
        android:layout_alignTop="@+id/btn5"
        android:text="@string/btn6"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn4"
        android:layout_below="@+id/btn4"
        android:layout_marginTop="12dp"
        android:text="@string/btn1"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn5"
        android:layout_alignTop="@+id/btn1"
        android:text="@string/btn2"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn6"
        android:layout_alignTop="@+id/btn2"
        android:text="@string/btn3"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn1"
        android:layout_below="@+id/btn1"
        android:layout_marginTop="12dp"
        android:text="@string/btnclear"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn2"
        android:layout_alignTop="@+id/btnclear"
        android:text="@string/btn0"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn0"
        android:layout_alignStart="@+id/btn3"
        android:text="@string/btnequal"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btndivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn9"
        android:layout_toEndOf="@+id/btn9"
        android:text="@string/btndivide"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btnmul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn6"
        android:layout_toEndOf="@+id/btn6"
        android:text="@string/btnmultiply"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn3"
        android:layout_alignBottom="@+id/btn3"
        android:layout_toEndOf="@+id/btn3"
        android:text="@string/btnadd"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnequal"
        android:layout_alignTop="@+id/btnequal"
        android:layout_toEndOf="@+id/btnequal"
        android:text="@string/btnsubtract"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btnMemorySave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnmemorysave"
        android:layout_below="@+id/btnclear"
        android:layout_alignStart="@+id/btnclear"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btnMemoryRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnmemoryread"
        android:layout_below="@+id/btn0"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/btnMemorySave"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btnMemoryClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnmemoryclear"
        android:layout_below="@+id/btnequal"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/btnMemoryRead"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="5dp"
        />

    <TextView
        android:id="@+id/tvControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btndivide"
        android:layout_alignEnd="@+id/btndivide"
        android:textSize="16sp"
        android:layout_alignStart="@+id/btn7"
        android:layout_marginBottom="46dp"
        android:layout_toEndOf="@+id/btn9" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvControl"
        android:layout_alignStart="@+id/btn7"
        android:layout_alignEnd="@+id/tvControl"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:textSize="30sp" />
</RelativeLayout>
